Fixed the problem with hover& click areas too large.

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,14 @@ body {
 	float: left;
 }
 
+.ryu-trigger-area {
+	position:absolute;
+	margin-left: 140px;
+	margin-top: 60px;
+	width: 220px;
+	height: 410px;
+}
+
 .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
